--- a/css-utilities/select.html
+++ b/css-utilities/select.html
@@ -15,47 +15,16 @@
     <title>Custom Dropdown Select Menu</title>
 </head>
 
-<body>
+<body style="margin: 1rem;">
     <p style="margin: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic inventore sapiente fuga et at,
         odio
         tempora, totam
         nobis provident vitae ipsum nam accusantium odit? Consequatur, aspernatur expedita? Consequuntur exercitationem
         aliquid laboriosam quam, doloremque nesciunt debitis neque culpa modi facilis est sequi, assumenda soluta ut
         esse consectetur incidunt porro autem eos!</p>
-    <!-- <div onkeydown="handleOptionKeyDown(event)" class="select-group">
-        <div onkeydown="handleKeyDown(event)" onclick="handleToggle()" tabindex="1" class="select-btn ">
-            <input class="sBtn-text" type="text" name="" value="Select">
-            <span value="Select" class="sBtn-text">Select your option</span>
-            <i class="bx bx-chevron-down"></i>
-        </div>
-
-        <ul class="options">
-            <li tabindex="0" class="option">
-                <i class="bx bxl-github" style="color: #171515;"></i>
-                <span value="Github" class="option-text">Github</span>
-            </li>
-            <li tabindex="0" class="option">
-                <i class="bx bxl-instagram-alt" style="color: #E1306C;"></i>
-                <span value="Instagram" class="option-text">Instagram</span>
-            </li>
-            <li tabindex="0" class="option">
-                <i class="bx bxl-linkedin-square" style="color: #0E76A8;"></i>
-                <span value="Linkedin" class="option-text">Linkedin</span>
-            </li>
-            <li tabindex="0" class="option">
-                <i class="bx bxl-facebook-circle" style="color: #4267B2;"></i>
-                <span value="Facebook" class="option-text">Facebook</span>
-            </li>
-            <li tabindex="0" class="option">
-                <i class="bx bxl-twitter" style="color: #1DA1F2;"></i>
-                <span value="Twitter" class="option-text">Twitter</span>
-            </li>
-
-        </ul>
-
-
-    </div> -->
-
+    <p style="margin: 1rem; font-weight: bold;">To get select style comment out <i style="color: brown;">select.js file
+            21 </i> line function.
+    </p>
     <div onkeydown="handleOptionKeyDown(event)" class="select-group ">
         <div onkeydown="handleKeyDown(event)" onclick="handleToggle()" tabindex="1" class="select-btn ">
             <input oninput="handleFilter(event)" class="sBtn-text" type="text" name="" value="Select">
